# customer_churn

./: .gitattributes  .pre-commit-config.yaml  Makefile  README.md  main.py  mlflow.db  pyproject.toml
configs/: config.py  model.yaml  settings.yaml
data/monitoring/: predictions.db
data/monitoring/parquet/: 8c9eafb5-5fa3-4774-8a50-9e90bb34c287.parquet  97a89c80-7443-4b43-81c1-64e64447f747.parquet
data/predictions/: churn_predictions.parquet
data/processed/: churn_features.parquet  churn_labels.parquet
data/raw/: customer_churn.json  customer_churn_mini.json
docs/: ~$ف الحل.docx  وصف الحل.docx
mlartifacts/models/: churn_pipeline_retrained.pkl
mlruns/.trash/274460156851307934/: meta.yaml
mlruns/.trash/433248090814665400/: meta.yaml
mlruns/.trash/477303983196307710/: meta.yaml
mlruns/.trash/540363323125039958/: meta.yaml
mlruns/.trash/557036432693530855/: meta.yaml
mlruns/.trash/685758591350241475/: meta.yaml
mlruns/.trash/743395638062338515/: meta.yaml
mlruns/.trash/902338509008214741/: meta.yaml
mlruns/.trash/908786213658119938/: meta.yaml
mlruns/0/: meta.yaml
mlruns/289199534381690882/: meta.yaml
mlruns/289199534381690882/24ba5fa0e201499f8e24036c86ffe728/: meta.yaml
mlruns/289199534381690882/455718a911bc4ded917655641e795b88/: meta.yaml
mlruns/289199534381690882/566f1f62285e42079e094273c3c6d502/: meta.yaml
mlruns/301297466927541526/: meta.yaml
mlruns/534207943903261973/: meta.yaml
mlruns/645887656767677886/: meta.yaml
mlruns/730291592822911968/: meta.yaml
notebooks/: experiements.ipynb  initial_train.ipynb  training_experiments.ipynb
reports/: data_drift_20251018_122524.csv
scripts/: init_predictions_db.py
src/: constants.py  evaluate_service.py  features.py  inference_service.py  logger.py  model_selection_service.py  models.py  predict_service.py  train_pipeline.py  train_service.py  window.py
src/build_features/: features_services.py  preprocess.py
src/monitoring/: drift_monitor.py  models.py  prediction_store.py
src/preprocessing/: generate_profile.py  preprocess.py
src/retraining/: retrain_service.py
src/training/: label_target.py  model_selection_service.py  train_service.py
(+1471 files in other folders)
