[project]
name = "customer-churn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "black>=25.9.0",
    "matplotlib>=3.10.0",
    "pandas>=2.3.3",
    "pyarrow>=21.0.0",
    "scikit-learn==1.5.2",
    "seaborn>=0.13.2",
    "setuptools>=80.9.0",
    "xgboost==2.1.2",
    "ydata-profiling>=4.17.0",
]

[dependency-groups]
dev = [
    "black>=25.9.0",
    "pre-commit>=4.3.0",
    "ruff>=0.13.3",
]

[flake8]
max-line-length = 200

[tool.black]
line-length = 200
target-version = ["py311"]

[tool.ruff]
line-length = 200
extend-select = ["I"]           # enable import-sorting rules
extend-ignore = ["E501", "E203"]        # example: ignore long-line warnings if you want
fix = true                      # allow auto-fix
